getting leadership section ready

--- a/index.html
+++ b/index.html
@@ -181,12 +181,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</div>
 				<div class="col-md-4 w3ls-markets-grid">
 					<div class="agileits-icon-grid">
-						<div class="icon-left">
-							<i class="fa fa-trophy" aria-hidden="true"></i>
-						</div>
+						<div class="icon-silverbranch"></div>
 						<div class="icon-right">
-							<h5>Aliquam</h5>
-							<p>Phasellus dapibus felis elit, sed accumsan arcu gravida vitae. Nullam aliquam erat at lectus ullamcorper, nec interdum neque hendrerit.</p>
+							<h5>Silverbranch</h5>
+							<p>Self-named most handsome guild leader 2017. Problably more than a little bit crazy. Backend Java dev, and overall Jack of all trades. Loves pineappe pizza.</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
