pineapple has an l in it

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						<div class="icon-silverbranch"></div>
 						<div class="icon-right">
 							<h5>Silverbranch</h5>
-							<p>Self-named most handsome guild leader 2017. Problably more than a little bit crazy. Backend Java dev, and overall Jack of all trades. Loves pineappe pizza.</p>
+							<p>Self-named most handsome guild leader 2017. Problably more than a little bit crazy. Backend Java dev, and overall Jack of all trades. Loves pineapple pizza.</p>
 						</div>
 						<div class="clearfix"> </div>
 					</div>
